fix bug in logo on mobiles (unvisible in devtools)

--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ header {
     margin-right: auto;
     min-width: 280px;
     max-width: 280px;
+    min-height: 61px;
+    max-height: 61px;
     background-color: rgb(255, 210, 0);
     padding: 2px;
     border-radius: 5px;  
@@ -43,15 +45,12 @@ header {
 
 h1 {
     text-transform: uppercase;
-    display: inline; 
 }
 
 header h1 p {
     display: inline-block;
-    background-color: rgb(255, 210, 0);
     padding: 3px;
 }
-
 
 .best {
     background-color: black;
